@@ -2,7 +2,7 @@
 //
 // ImageLib Utility Sources
 // Copyright (C) 2000-2009 by Denton Woods
-// Last modified: 03/03/2009
+// Last modified: 03/16/2009
 //
 // Filename: src-ILU/src/ilu_error.c
 //
@@ -15,16 +15,17 @@
 #include "ilu_error/ilu_err-arabic.h"
 #include "ilu_error/ilu_err-dutch.h"
 #include "ilu_error/ilu_err-english.h"
+#include "ilu_error/ilu_err-french.h"
+#include "ilu_error/ilu_err-german.h"
+#include "ilu_error/ilu_err-italian.h"
 #include "ilu_error/ilu_err-japanese.h"
 #include "ilu_error/ilu_err-spanish.h"
-#include "ilu_error/ilu_err-german.h"
-#include "ilu_error/ilu_err-french.h"
 
 
 ILconst_string *iluErrors;
 ILconst_string *iluLibErrors;
 ILconst_string *iluMiscErrors;
-#define ILU_NUM_LANGUAGES 7
+#define ILU_NUM_LANGUAGES 8
 
 ILconst_string *iluErrorStrings[ILU_NUM_LANGUAGES] = {
 	iluErrorStringsEnglish,
@@ -33,7 +34,8 @@ ILconst_string *iluErrorStrings[ILU_NUM_LANGUAGES] = {
 	iluErrorStringsFrench,
 	iluErrorStringsJapanese,
 	iluErrorStringsSpanish,
-	iluErrorStringsGerman
+	iluErrorStringsGerman,
+	iluErrorStringsItalian
 };
 
 ILconst_string *iluLibErrorStrings[ILU_NUM_LANGUAGES] = {
@@ -43,7 +45,8 @@ ILconst_string *iluLibErrorStrings[ILU_NUM_LANGUAGES] = {
 	iluLibErrorStringsFrench,
 	iluLibErrorStringsJapanese,
 	iluLibErrorStringsSpanish,
-	iluLibErrorStringsGerman
+	iluLibErrorStringsGerman,
+	iluLibErrorStringsItalian
 };
 
 ILconst_string *iluMiscErrorStrings[ILU_NUM_LANGUAGES] = {
@@ -53,7 +56,8 @@ ILconst_string *iluMiscErrorStrings[ILU_NUM_LANGUAGES] = {
 	iluMiscErrorStringsFrench,
 	iluMiscErrorStringsJapanese,
 	iluMiscErrorStringsSpanish,
-	iluMiscErrorStringsGerman
+	iluMiscErrorStringsGerman,
+	iluMiscErrorStringsItalian
 };
 
 
@@ -88,6 +92,7 @@ ILboolean ILAPIENTRY iluSetLanguage(ILenum Language)
 		case ILU_JAPANESE:
 		case ILU_SPANISH:
 		case ILU_GERMAN:
+		case ILU_ITALIAN:
 			iluErrors = iluErrorStrings[Language - ILU_ENGLISH];
 			iluLibErrors = iluLibErrorStrings[Language - ILU_ENGLISH];
 			iluMiscErrors = iluMiscErrorStrings[Language - ILU_ENGLISH];
